tests/test_struct/bad/nested2.catala_en
## Article

```catala
declaration structure S:
  data x content E
  data y content integer

declaration enumeration E:
  -- Case1 content boolean
  -- Case2 content S

declaration scope A:
  context x content E
```

```catala-test-inline
$ catala Interpret -s A
[ERROR] Cyclic dependency detected between types!

Cycle type S, declared:
 --> tests/test_struct/bad/nested2.catala_en
  | 
4 | declaration structure S:
  |                       ^
  + Article

Used here in the definition of another cycle type E:
  --> tests/test_struct/bad/nested2.catala_en
   | 
10 |   -- Case2 content S
   |                    ^
   + Article

Cycle type E, declared:
 --> tests/test_struct/bad/nested2.catala_en
  | 
8 | declaration enumeration E:
  |                         ^
  + Article

Used here in the definition of another cycle type S:
 --> tests/test_struct/bad/nested2.catala_en
  | 
5 |   data x content E
  |                  ^
  + Article
#return code 255#
```
